--- a/src/_StyleGuides.scss
+++ b/src/_StyleGuides.scss
@@ -4,8 +4,10 @@
 $clr-primary : #000;
 $clr-light-gray : #DBDBDB;
 $clr-input-border : #DBDBDB;
+$clr-border : #DBDBDB;
 $clr-accent: #67B5FA;
 $clr-input-placeholder:#737373;
+$clr-or-text:#737373;
 $bg-navigation-hover: #1A1A1A;
 $bg-more-options-nav: #262626;
 $bg-secondary-btn: #262626;
@@ -21,7 +23,7 @@ $gradiant-clr-orange : #FF9C00;
 $fs-heading1: 1rem;
 $fw-extra-bold : 700;
 $fs-heading2: 0.875rem;
-$fw-bold : 600;
+$fw-bold : 500;
 $fs-heading3: 0.75rem;
 
 
