--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,6 +10,8 @@
     font-size: guide.$fs-heading2;
     color: #fff;
     font-weight: guide.$fw-bold;
+    cursor: pointer;
+
 }
 
 #primary {
@@ -22,5 +24,5 @@
 
 #ghost {
     background: transparent;
-    border: solid 1px guide.$clr-accent;
+    color: guide.$clr-accent;
 }
