--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,10 +1,10 @@
 @use "../../StyleGuides" as guide;
 
 .aside {
-  background: guide.$clr-primary;
   height: 692px;
   width: fit-content;
   padding: 0.7rem 0.4rem;
+  border-right: solid 1px #262626;
 }
 
 .logo {
