Home Page styles done

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,12 +1,34 @@
-@use '../../StyleGuides' as guide;
+@use "../../StyleGuides" as guide;
 .home {
-    background: guide.$clr-primary;
-    display: flex;
+  background: guide.$clr-primary;
+  display: flex;
 }
 
 .main_section {
-    width: 640px;
-    margin-left: 7%;
-    
+  width: 640px;
+  margin-left: 7%;
 }
 
+.suggestion_section {
+  margin-top: 1.2rem;
+  margin-left: 5%;
+  padding: 1rem 0;
+}
+
+.suggestions {
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+    span {
+      color: #737373;
+    }
+  }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
