Added Inbox page and some minor bug fixes

--- a/src/features/Messages/components/InboxRowContainer/InboxRowContainer.module.scss
+++ b/src/features/Messages/components/InboxRowContainer/InboxRowContainer.module.scss
@@ -2,6 +2,7 @@
 .container {
   width: 397px;
   height: 692px;
+  border-right: solid 1px #262626;
   header {
     margin-top: 1rem;
     padding: 0 0.4rem;
