--- a/src/features/Messages/components/Chat/Chat.module.scss
+++ b/src/features/Messages/components/Chat/Chat.module.scss
@@ -11,14 +11,18 @@
     height: 75px;
     align-items: center;
     padding: 0 0.6rem;
-    gap: 1.2rem;
+    gap: 1rem;
     border-bottom: solid 1px #262626;
+    margin-bottom: 1rem;
     .call {
       margin-left: auto;
     }
 
     img:not(:first-child) {
       cursor: pointer;
+    }
+    span{
+      color: #fff;
     }
   }
 }
@@ -52,6 +56,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  padding: 0 1rem;
 }
 
 .input_wrapper {
@@ -72,5 +77,9 @@
     background: transparent;
     border: none;
     outline: none;
+    color: #fff;
+  }
+  img{
+    cursor: pointer;
   }
 }
