Minor bug fix and Refactoring

--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -39,9 +39,10 @@
   gap: 0.4rem;
   button {
     width: 238px;
-  }
-  a {
-    text-decoration: none;
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
   }
 }
 
