Fixed bugs on Sign in page and storybook

--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -127,3 +127,17 @@
     cursor: pointer;
   }
 }
+
+.spinner {
+  height: 2ch;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
