--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -3,7 +3,7 @@
     border-radius: 50%;
     aspect-ratio: 1/1;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
     cursor: pointer;
   }
 }
