--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -48,6 +48,33 @@
   }
 }
 
+.bio {
+  color: #fff;
+  margin-top: 1.5rem;
+  margin-left: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  svg {
+    cursor: pointer;
+    font-size: 1.3rem;
+  }
+}
+
+.edit_bio {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  input {
+    background: transparent;
+    border: none;
+    border-bottom: solid 1px #333;
+    outline: none;
+    color: #fff;
+    width: 100px;
+  }
+}
+
 .highlights {
   margin-top: 2.5rem;
   padding: 0 0.6rem;
@@ -115,5 +142,19 @@
     height: 310px;
     object-fit: cover;
     object-position: top;
+  }
+}
+
+.avatar_wrapper {
+  position: relative;
+  input {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    top: 0;
+    left: 15px;
+    cursor: pointer;
+    opacity: 0;
   }
 }
