Added Post related components and functionality

--- a/src/_StyleGuides.scss
+++ b/src/_StyleGuides.scss
@@ -1,32 +1,25 @@
 /* Here are the style guides , colors , typography and pallettes */
 
-
-$clr-primary : #000;
-$clr-light-gray : #DBDBDB;
-$clr-input-border : #DBDBDB;
-$clr-border : #DBDBDB;
-$clr-accent: #67B5FA;
-$clr-input-placeholder:#737373;
-$clr-or-text:#737373;
-$bg-navigation-hover: #1A1A1A;
+$clr-primary: #000;
+$clr-light-gray: #dbdbdb;
+$clr-input-border: #dbdbdb;
+$clr-border: #dbdbdb;
+$clr-accent: #67b5fa;
+$clr-input-placeholder: #737373;
+$clr-or-text: #737373;
+$bg-navigation-hover: #1a1a1a;
 $bg-more-options-nav: #262626;
 $bg-secondary-btn: #262626;
-$bg-more-options-nav-hover: #3C3C3C;
-$bg-input: #FAFAFA;
-$gradiant-clr-red : #FF3A44;
-$gradiant-clr-orange : #FF9C00;
-
-
-
-
+$bg-more-options-nav-hover: #3c3c3c;
+$bg-input: #fafafa;
+$gradiant-clr-red: #ff3a44;
+$gradiant-clr-orange: #ff9c00;
+$bg-post-modal: #262626;
+$clr-post-modal-placeholder-text: #737373;
+$clr-post-modal-secondary-text: #a8a8a8;
 
 $fs-heading1: 1rem;
-$fw-extra-bold : 700;
+$fw-extra-bold: 700;
 $fs-heading2: 0.875rem;
-$fw-bold : 500;
+$fw-bold: 500;
 $fs-heading3: 0.75rem;
-
-
-
-
-
