--- a/src/features/Posts/components/Range/Range.module.scss
+++ b/src/features/Posts/components/Range/Range.module.scss
@@ -28,12 +28,13 @@ input[type="range"] {
 .title {
   color: #fff;
   font-weight: 500;
+  text-transform: capitalize;
 }
 
 .value {
   position: absolute;
-  right: 0;
-  top: 45%;
+  right: -4%;
+  top: 65%;
   margin-right: 0.5rem;
   color: #737373;
 }
