Added Sharing post and some bug fix in editing

--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -141,7 +141,8 @@
     width: 100%;
     height: 310px;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
+    cursor: pointer;
   }
 }
 
