Added post preview feature

--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -38,6 +38,11 @@
   }
 }
 
+#not_admin {
+  justify-content: flex-start;
+  margin-left: 3rem;
+}
+
 .profile_info {
   display: flex;
   align-items: center;
