--- a/src/features/Posts/components/Header/Header.module.scss
+++ b/src/features/Posts/components/Header/Header.module.scss
@@ -7,16 +7,13 @@
   display: flex;
   align-items: center;
   gap: 0.6rem;
-
-  img {
-    margin-left: auto;
-  }
 }
 
 .username {
   color: #fff;
   font-size: guide.$fs-heading2;
   font-family: guide.$fw-bold;
+  cursor: pointer;
 }
 
 .date {
