--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -44,7 +44,7 @@
   }
 }
 
-.hover_element{
+.hover_element {
   position: absolute;
   inset: 0;
   background: transparent;
@@ -57,7 +57,7 @@
   transition: opacity 200ms ease;
 
   &:hover {
-      opacity: 1;
+    opacity: 1;
   }
 }
 
@@ -133,9 +133,10 @@
 
 .media {
   width: 935px;
-  height: 1020px;
+  max-height: 1020px;
   border-top: none;
   margin: 0 auto;
+  padding-bottom: 0.4rem;
   nav {
     width: 100%;
     height: 52px;
@@ -172,6 +173,12 @@
     object-position: center;
     cursor: pointer;
   }
+}
+
+.no_content {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
 }
 
 .avatar_wrapper {
